--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,22 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.daminshah.newsapp.MainActivity">
-<ScrollView
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:layout_marginTop="16sp">
-    <TextView
-        android:id="@+id/url_display"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=" Click on The Search Button , Your Response will appear over here"
-        android:textSize="22sp"
+<!--<ScrollView-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_marginTop="16sp">-->
+    <!--<TextView-->
+        <!--android:id="@+id/url_display"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text=" Click on The Search Button , Your Response will appear over here"-->
+        <!--android:textSize="22sp"-->
 
-        />
-    
+        <!--/>-->
+    <!---->
 
 
-</ScrollView>
+<!--</ScrollView>-->
 
 
      <TextView
@@ -37,6 +37,13 @@
          android:layout_width="42dp"
          android:layout_gravity="center"
          android:visibility="invisible" />
+    
+    
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/rv_news">
+    </android.support.v7.widget.RecyclerView>
 
 
  </FrameLayout>
