--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:paddingLeft="8dp"
     android:paddingRight="8dp"
-    android:background="?attr/selectableItemBackground">
+    android:background="#42f498">
     >
     
     <TextView
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="18sp"
+        android:textSize="30sp"
         android:paddingTop="8dp"/>
 
     <ImageView
@@ -26,14 +26,16 @@
         android:id="@+id/news_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"/>
+        android:textSize="20sp"
+        android:textStyle="italic"/>
 
     <TextView
         android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/news_date"
-        android:textSize="18sp"/>
+        android:textSize="20sp"/>
 
 
     <View
